Add HPC & group features

--- a/Jackknife_Connectivity.ipynb
+++ b/Jackknife_Connectivity.ipynb
@@ -25,7 +25,9 @@
    "id": "9a10e38d",
    "metadata": {},
    "source": [
-    "### 1. Install & Import Packages \n",
+    "### 1. Data Preparation\n",
+    "\n",
+    "#### 1a. Install & Import Packages \n",
     "\n",
     "This step ensures all needed packages are either installed or, if already installed, imported."
    ]
@@ -37,26 +39,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install packages needed for all steps of the analyses\n",
+    "# install packages needed for all steps of the analyses\n",
     "!pip install bctpy\n",
     "!pip install statsmodels\n",
-    "!pip install pandas\n",
+    "!pip install pandas \n",
     "!pip install numpy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "657b9e7f",
+   "id": "4575772c-ff2a-4962-9954-8658663f9e27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import packages\n",
+    "# import packages\n",
     "import os, glob\n",
     "import pandas as pd\n",
-    "import numpy as np \n",
+    "import numpy as np "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25870b1f-8e88-4ca9-8b01-1774de86372c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import bct\n",
     "import statsmodels.formula.api as sm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c6b8e67-ecaa-4aa7-8ca7-9711e335b6f8",
+   "metadata": {},
+   "source": [
+    "#### 1b. Define Paths & Files\n",
+    "\n",
+    "Modify this step for your specific data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f455b8b-3f0b-4c74-841c-74f339cea3c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define paths, files & variables\n",
+    "civpath = '/scratch/katie/ukbb/data/civet_0mm/' # location containing civet outputs\n",
+    "dpath = '/scratch/katie/ukbb/data/' # location to load glimfile & save outputs\n",
+    "\n",
+    "gfile = 'ukbb_glimfile_final.csv' # glimfile\n",
+    "dktvert_file = 'CIVET_2.0_DKT.txt' # DKT CIVET-based vertex file\n",
+    "dktinfo_file = 'DKT.csv' # DKT parcellation info\n",
+    "\n",
+    "measure = 'thickness' # structural metric (e.g., thickness, surface_area, volume)\n",
+    "idvar = 'eid' # unique subject ID variable\n",
+    "group = 'dx' # grouping variable (if applicable)\n",
+    "covars = ['age','mean_' + measure] # covariates"
    ]
   },
   {
@@ -86,47 +128,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b01130b",
+   "id": "045ca9d9-702c-4b81-9601-ddec4327295f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define measures and paths for Step 2. \n",
-    "measure = \"thickness\"\n",
-    "civpath = \"/project/def-mlepage/ukbb/civet/\" + measure + \"/\"\n",
-    "outdir = \"/scratch/katie/ukbb/data/\"\n",
-    "dname = 'ukbb_' + measure + '_vertexdata.pkl'\n",
-    "idvar = \"eid\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb967a4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find files & IDs\n",
+    "# find files & IDs\n",
     "Lfiles = glob.glob(civpath + '*left*')\n",
     "Lfiles.sort()\n",
     "Rfiles = glob.glob(civpath + '*right*')\n",
     "Rfiles.sort()\n",
-    "subjIDs = [ids.split('/')[-1].split('_')[1] for ids in Lfiles]\n",
+    "subjIDs = [ids.split('/')[-1].split('_')[1] for ids in Lfiles] # modify this for different filename conventions\n",
     "\n",
-    "# Make dataframe & save as pickle\n",
+    "# make dataframe & save as pickle\n",
     "Ldf = pd.concat((pd.read_csv(Lf, dtype=float, header=None).T for Lf in Lfiles))\n",
     "Rdf = pd.concat((pd.read_csv(Rf, dtype=float, header=None).T for Rf in Rfiles))\n",
     "df = pd.concat([Ldf,Rdf], axis=1)\n",
     "df.index = subjIDs\n",
     "df.index.names = [idvar]\n",
-    "df.to_pickle(outdir + dname)\n",
+    "df.to_pickle(dpath + measure + '_vertexdata.pkl')\n",
     "\n",
-    "# Calculate and save mean anatomical measure (mean thickness)\n",
-    "mean_measure = pd.DataFrame(pd.to_numeric(df.mean(axis=1)), columns=[\"mean_\" + measure])\n",
-    "mean_measure.to_csv(outdir + 'mean_' + measure + '.csv')\n",
+    "# calculate and save mean anatomical measure (mean thickness)\n",
+    "mean_measure = pd.DataFrame(pd.to_numeric(df.mean(axis=1)), columns=['mean_' + measure])\n",
+    "mean_measure.to_csv(dpath + 'mean_' + measure + '.csv')\n",
     "\n",
-    "# Calculate and save total anatomical measure (total thickness)\n",
-    "tot_measure = pd.DataFrame(pd.to_numeric(df.sum(axis=1)), columns=[\"total_\" + measure])\n",
-    "tot_measure.to_csv(outdir + 'total_' + measure + '.csv')"
+    "# calculate and save total anatomical measure (total thickness)\n",
+    "tot_measure = pd.DataFrame(pd.to_numeric(df.sum(axis=1)), columns=['total_' + measure])\n",
+    "tot_measure.to_csv(dpath + 'total_' + measure + '.csv')"
    ]
   },
   {
@@ -156,29 +183,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "355f482d",
+   "id": "30375bb6-dca5-4261-941a-5cf1dcab2612",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define measures and paths for Step 3. \n",
-    "dpath = '/scratch/katie/ukbb/data/'\n",
-    "ppath = '/project/def-mlepage/ukbb/civet/'\n",
-    "dktvert_file = 'CIVET_2.0_DKT.txt'\n",
-    "dktinfo_file = 'DKT.csv'\n",
-    "roivar = \"roi\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37040784",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parcellation\n",
-    "dktvert = pd.read_csv(ppath + dktvert_file, dtype=str, names= [roivar], header=None)\n",
-    "dktinfo = pd.read_csv(ppath + dktinfo_file, dtype=str)\n",
+    "# read DKT and data files\n",
+    "#df = pd.read_pickle(dpath + measure + '_vertexdata.pkl')\n",
+    "dktvert = pd.read_csv(dktvert_file, dtype=str, names=['roi'])\n",
+    "dktvert\n",
     "\n",
+    "dktinfo = pd.read_csv(dktinfo_file, dtype=str)\n",
+    "\n",
+    "# parcellation\n",
     "parc = pd.DataFrame(index= df.index.copy())\n",
     "for r in range(len(dktinfo)):\n",
     "    roi = dktinfo.label_number[r]\n",
@@ -186,7 +202,8 @@
     "    means = pd.DataFrame(df.iloc[:,dktvert.index[dktvert.roi == roi]].mean(axis=1),columns=[abr], index= df.index.copy())\n",
     "    parc = pd.concat([parc,means], axis = 1)\n",
     "\n",
-    "parc.to_csv(dpath + 'dkt_parcellation_' + measure + '.csv') # parcellated data\n"
+    "# write to csv\n",
+    "parc.to_csv(dpath + 'dkt_parcellation_' + measure + '.csv') # parcellated data"
    ]
   },
   {
@@ -216,42 +233,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd9a4670",
+   "id": "f25973d1-6442-486b-987c-f4ba7b8f570d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define measures and paths for Step 4.\n",
-    "gfile = 'ukbb_controls.csv'\n",
-    "glim = pd.read_csv(os.path.join(dpath, gfile), index_col=[idvar]) # read glimfile \n",
-    "glim = glim.join(mean_measure) # merge glim & mean thickness\n",
-    "glim_parc = glim.join(parc) # #join glim + mean thickness & parcellated data\n",
-    "covar1 = glim_parc.age_assess_t2\n",
-    "covar2 = glim_parc.mean_thickness"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15c663f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Regression\n",
-    "resid=[]\n",
-    "for i in parc:\n",
-    "    reg = sm.ols('parc.loc[:,i] ~ covar1 + covar2', data=glim_parc).fit()\n",
-    "    residuals = reg.resid\n",
-    "    resid.append(residuals)\n",
+    "# read files\n",
+    "glim = pd.read_csv(dpath + gfile, index_col='eid', dtype={'eid':str})\n",
+    "parc = pd.read_csv(dpath + 'dkt_parcellation_' + measure + '.csv', index_col='eid', dtype={'eid':str})\n",
+    "mean_measure = pd.read_csv(dpath + 'mean_' + measure + '.csv', index_col='eid', dtype={'eid':str})\n",
+    "glim = glim[glim.index.isin(parc.index)]\n",
     "\n",
-    "res = pd.DataFrame(resid).T\n",
-    "res.columns=parc.columns\n",
-    "res.to_csv('residuals.csv')"
+    "# merge glimfile and parcellated data\n",
+    "glim = glim.join(mean_measure) # merge glim & mean thickness # modify to total_measure if using surface_area\n",
+    "glim_parc = glim.join(parc) # join glim + mean thickness & parcellated data\n",
+    "rois = parc.columns\n",
+    "\n",
+    "# regression\n",
+    "if group in glim_parc.columns: # group-based regressions if applicable\n",
+    "    for g in glim_parc[group].unique():\n",
+    "        resid=[]\n",
+    "        glim_parc_group = glim_parc[glim_parc[group]==g]\n",
+    "        parc_group = glim_parc_group[rois]\n",
+    "        covar1 = glim_parc_group[covars[0]]\n",
+    "        covar2 = glim_parc_group[covars[1]]\n",
+    "        for i in parc_group:\n",
+    "            reg = sm.ols('parc_group.loc[:,i] ~ covar1 + covar2', data=glim_parc_group).fit()\n",
+    "            residuals = reg.resid\n",
+    "            resid.append(residuals)\n",
+    "        \n",
+    "        # merge groups\n",
+    "        if g == glim_parc[group].unique()[0]:\n",
+    "            res = pd.DataFrame(resid).T\n",
+    "            res.columns = parc.columns\n",
+    "        else:\n",
+    "            tmp = pd.DataFrame(resid).T\n",
+    "            tmp.columns = parc.columns\n",
+    "            res = pd.concat([res,tmp], sort=True)\n",
+    "else:\n",
+    "    resid=[]\n",
+    "    covar1 = glim_parc[covars[0]]\n",
+    "    covar2 = glim_parc[covars[1]]\n",
+    "    for i in parc:\n",
+    "        reg = sm.ols('parc.loc[:,i] ~ covar1 + covar2', data=glim_parc).fit()\n",
+    "        residuals = reg.resid\n",
+    "        resid.append(residuals)\n",
+    "    res = pd.DataFrame(resid).T\n",
+    "    res.columns = parc.columns\n",
+    "\n",
+    "# write to csv\n",
+    "glim.to_csv(dpath + 'glimfile.csv')\n",
+    "glim_parc.to_csv(dpath + 'glimfile_parcellation.csv')\n",
+    "res.to_csv(dpath + 'residuals.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "1949922a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### 5. Structural Covariance \n",
     "\n",
@@ -274,11 +314,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "02ddc442",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Full sample correlation matrix\n",
-    "corrmtrix = res.corr(method=\"pearson\")"
+    "# read files\n",
+    "#glim_parc = pd.read_csv(dpath + 'glimfile_parcellation.csv', index_col=[idvar], dtype={'eid':str})\n",
+    "#res = pd.read_csv(dpath + 'residuals.csv', index_col=[idvar], dtype={'eid':str}) # read residuals\n",
+    "\n",
+    "# full sample (or group) correlation matrix\n",
+    "if group in glim_parc.columns:\n",
+    "    for g in glim_parc[group].unique():\n",
+    "        res_group = res.loc[glim_parc[group]==g]\n",
+    "        corrmtrix = res_group.corr(method='pearson')\n",
+    "        corrmtrix.to_csv(dpath + 'corrmtrix_full_group_' + str(g) + '.csv') # write to csv\n",
+    "else:\n",
+    "    corrmtrix = res.corr(method='pearson')\n",
+    "    corrmtrix.to_csv(dpath + 'corrmtrix_full.csv') # write to csv"
    ]
   },
   {
@@ -313,21 +366,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Jackknife correlation \n",
-    "jack = []\n",
-    "n = len(glim_parc[:]) #full sample \n",
-    "for i,row in res.iterrows(): #i = eid, so the loop goes over each row in the dataframe meaning each participant\n",
-    "    LOO = res.drop(i) #and drops one row depending on i per loop \n",
-    "    #print(LOO) #check if matrices have size of N-1 x 62 (sample -1 x DKT regions)\n",
-    "    corrLOO = LOO.corr(method=\"pearson\"); \n",
-    "    W = (n*corrmtrix)-((n-1)*corrLOO);\n",
+    "# read files\n",
+    "#glim_parc = pd.read_csv(dpath + 'glimfile_parcellation.csv', index_col=[idvar], dtype={'eid':str})\n",
+    "#res = pd.read_csv(dpath + 'residuals.csv', index_col=[idvar], dtype={'eid':str})\n",
     "\n",
-    "    #% Absolute \n",
-    "    normW = abs(W);\n",
-    "    jack.append(normW)\n",
-    "\n",
-    "jk = np.array(jack)\n",
-    "np.save('jackknife_output.npy', jk)"
+    "# jackknife correlation \n",
+    "if group in glim_parc.columns:\n",
+    "    for g in glim_parc[group].unique():\n",
+    "        glim_parc_group = glim_parc[glim_parc[group]==g]\n",
+    "        res_group = res.loc[glim_parc[group]==g]\n",
+    "        corrmtrix = pd.read_csv(dpath + 'corrmtrix_full_group_' + str(g) + '.csv', index_col=[0])\n",
+    "        jack = []\n",
+    "        n = len(glim_parc_group[:]) # full sample\n",
+    "        for i,row in res_group.iterrows(): # i = eid, so the loop goes over each row in the dataframe meaning each participant\n",
+    "            LOO = res_group.drop(i) # and drops one row depending on i per loop (LOO = leave one out)\n",
+    "            corrLOO = LOO.corr(method='pearson');\n",
+    "            W = (n*corrmtrix)-((n-1)*corrLOO);\n",
+    "            # Absolute\n",
+    "            normW = abs(W);\n",
+    "            jack.append(normW)\n",
+    "        jk = np.array(jack)\n",
+    "        np.save(dpath + 'jackknife_output_group_' + str(g) + '.npy', jk) # write out as numpy array\n",
+    "else:\n",
+    "    jack = []\n",
+    "    n = len(glim_parc[:]) # full sample\n",
+    "    corrmtrix = pd.read_csv(dpath + 'corrmtrix_full.csv', index_col=[0])\n",
+    "    for i,row in res.iterrows(): # i = eid, so the loop goes over each row in the dataframe meaning each participant\n",
+    "        LOO = res.drop(i) # and drops one row depending on i per loop (LOO = leave one out)\n",
+    "        corrLOO = LOO.corr(method='pearson'); \n",
+    "        W = (n*corrmtrix)-((n-1)*corrLOO);\n",
+    "        # Absolute\n",
+    "        normW = abs(W);\n",
+    "        jack.append(normW)\n",
+    "    jk = np.array(jack)\n",
+    "    np.save(dpath + 'jackknife_output.npy', jk) # write out as numpy array"
    ]
   },
   {
@@ -361,37 +433,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fixing that the diagonals are all 0 \n",
-    "for i in jk:\n",
-    "     np.fill_diagonal(i, 0, wrap=True)\n",
+    "# read files\n",
+    "glim = pd.read_csv(dpath + 'glimfile.csv', index_col=[idvar], dtype={'eid':str})\n",
     "\n",
-    "# Strengths\n",
-    "def strengths_und(jk):\n",
-    "    return np.sum(jk, axis=1) \n",
-    "\n",
-    "strengths = strengths_und(jk)\n",
-    "s = pd.DataFrame(data = strengths, index = glim.index.copy())\n",
-    "s.columns=[\"Strength_\"+str(i) for i in range(1, s.shape[1] + 1)]\n",
-    "data_conn = glim.join(s) \n",
-    "\n",
-    "# Global Efficiency\n",
-    "globeff= []\n",
-    "for i in jk:\n",
-    "    bct.efficiency_wei(i) \n",
-    "    globeff.append(bct.efficiency_wei(i))\n",
+    "# compute graph measures\n",
+    "if group in glim.columns:\n",
+    "    for g in glim[group].unique():\n",
+    "        glim_group = glim[glim[group]==g]\n",
+    "        jk = np.load(dpath +'jackknife_output_group_' + str(g) + '.npy')\n",
+    "        \n",
+    "        # fixing that the diagonals are all 0 \n",
+    "        for i in jk:\n",
+    "            np.fill_diagonal(i, 0, wrap=True)\n",
+    "        \n",
+    "        # strengths\n",
+    "        def strengths_und(jk):\n",
+    "            return np.sum(jk, axis=1)\n",
+    "        strengths = strengths_und(jk)\n",
+    "        s = pd.DataFrame(data=strengths, index=glim_group.index.copy())\n",
+    "        s.columns = ['Strength_'+ str(i) for i in range(1, s.shape[1] + 1)]\n",
+    "        tmp = glim_group.join(s)\n",
+    "        \n",
+    "        # global efficiency\n",
+    "        globeff = []\n",
+    "        for i in jk:\n",
+    "            bct.efficiency_wei(i)\n",
+    "            globeff.append(bct.efficiency_wei(i))\n",
+    "        e = pd.DataFrame(data=globeff, index=glim_group.index.copy())\n",
+    "        e.columns = ['Global Efficiency']\n",
+    "        tmp = tmp.join(e)\n",
     "    \n",
-    "e = pd.DataFrame(data = globeff, index = glim.index.copy())\n",
-    "e.columns=[\"Global Efficiency\"]\n",
-    "data_conn = data_conn.join(e)  \n",
-    "\n",
-    "# Save dataframe\n",
-    "data_conn.to_csv('ukbb_data_crystal_jackknife_graph_theory.csv')"
+    "        # merge groups\n",
+    "        if g == glim[group].unique()[0]:\n",
+    "            data_conn = tmp\n",
+    "        else:\n",
+    "            data_conn = pd.concat([data_conn,tmp])\n",
+    "    \n",
+    "    # write to csv\n",
+    "    data_conn.to_csv(dpath + 'glimfile_jackknife_output.csv')\n",
+    "else:\n",
+    "    jk = np.load(dpath + 'jackknife_output.npy')\n",
+    "    \n",
+    "    # fixing that the diagonals are all 0\n",
+    "    for i in jk:\n",
+    "        np.fill_diagonal(i, 0, wrap=True)\n",
+    "    \n",
+    "    # strengths\n",
+    "    def strengths_und(jk):\n",
+    "        return np.sum(jk, axis=1)\n",
+    "    strengths = strengths_und(jk)\n",
+    "    s = pd.DataFrame(data=strengths, index=glim.index.copy())\n",
+    "    s.columns = ['Strength_'+str(i) for i in range(1, s.shape[1] + 1)]\n",
+    "    data_conn = glim.join(s)\n",
+    "    \n",
+    "    # global efficiency\n",
+    "    globeff = []\n",
+    "    for i in jk:\n",
+    "        bct.efficiency_wei(i)\n",
+    "        globeff.append(bct.efficiency_wei(i))\n",
+    "    e = pd.DataFrame(data=globeff, index=glim.index.copy())\n",
+    "    e.columns = ['Global Efficiency']\n",
+    "    data_conn = data_conn.join(e)\n",
+    "    \n",
+    "    # write to csv\n",
+    "    data_conn.to_csv(dpath + 'glimfile_jackknife_output.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a42536d-0058-43c5-b7e8-7f0d7729e9ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.8",
    "language": "python",
    "name": "python3"
   },
@@ -405,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
